Remove flyway & update gradle