@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id("com.github.johnrengelman.shadow") version "8.1.1"
-    id "org.flywaydb.flyway" version "9.21.1"
 }
 
 group = 'be.hokkaydo'
@@ -18,26 +17,17 @@ dependencies {
     // RSS helper
     implementation("rome:rome:1.0")
     // https://mvnrepository.com/artifact/org.json/json
-    implementation group: 'org.json', name: 'json', version: '20230227'
+    implementation group: 'org.json', name: 'json', version: '20231013'
     implementation 'io.github.cdimascio:dotenv-java:3.0.0'
     implementation("club.minnced:discord-webhooks:0.8.4")
     implementation 'com.auth0:java-jwt:4.4.0'
     implementation 'org.springframework:spring-jdbc:6.0.11'
     implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
-    implementation 'org.flywaydb:flyway-core:9.21.1'
     // https://mvnrepository.com/artifact/org.kohsuke/github-api
     implementation group: 'org.kohsuke', name: 'github-api', version: '1.315'
     implementation 'org.jsoup:jsoup:1.17.2'
     implementation("ch.qos.logback:logback-classic:1.5.6")
 }
-
-tasks.register('run', JavaExec) {
-    classpath = files('build/libs/EPLBot-1.0-SNAPSHOT-all.jar')
-}
-
-//tasks.withType(JavaCompile).each {
-//    it.options.compilerArgs.add('--enable-preview')
-//}
 
 test {
     useJUnitPlatform()
@@ -49,8 +39,4 @@ jar {
                 'Main-Class': 'com.github.hokkaydo.eplbot.Main'
         )
     }
-}
-
-flyway {
-    url = "jdbc:sqlite:" + project.projectDir.toString() + "/persistence/database.sqlite"
 }
